<resources>
    <string name="app_name">ShopAssistantProject</string>
    <string name="welcome_to_your_shopassistant">Your ShopAssistant</string>
    <string name="options">Options</string>
    <string name="shop_assistant">Shop Assistant</string>
    <string name="draculacolor">DraculaColor</string>
    <string name="off_on">Off/On</string>
    <string name="bigsize">BigSize</string>
    <string name="add_delete">Add/Delete</string>
    <string name="product">Product</string>
    <string name="quantity">Quantity</string>
    <string name="bought">Bought</string>
    <string name="checkbox">CheckBox</string>
    <string name="big">22</string>
    <string name="small">22</string>
    <string name="price">Price</string>
    <string name="textview">TextView</string>
    <string name="addProduct">com.example.shopassistantproject.ADD_PRODUCT</string>
    <string name="addMaps">com.example.shopassistantproject.ADD_MAPS</string>
    <string name="channelID">channelP</string>
    <string name="channelIG">channelG</string>
    <string name="channelName">Channel Product</string>
    <string name="channelNameMap">Channel Map</string>
    <string name="modify">Modify</string>
    <string name="title_activity_maps">Map</string>
    <string name="shop">et_place.text.toString()</string>


</resources>