<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/widthlist"
        android:layout_weight="1"
        android:text="@string/textview"
        android:visibility="gone"/>


    <TextView
        android:id="@+id/tx_product"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/widthlist"
        android:layout_weight="1"
        android:text="@string/textview" />

    <TextView
        android:id="@+id/tx_quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/widthlist"
        android:layout_weight="1"
        android:text="@string/textview" />

    <TextView
        android:id="@+id/tx_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/widthlist"
        android:layout_weight="1"
        android:text="@string/textview" />

    <CheckBox
        android:id="@+id/tv_cb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/widthlist"
        android:layout_weight="1"
        android:text="@string/bought" />

    <Button
        android:id="@+id/btm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/modify" />

</LinearLayout>