<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OptionsActivity">

  <androidx.appcompat.widget.SwitchCompat
      android:id="@+id/s1"
      android:layout_width="120dp"
      android:layout_height="64dp"
      android:layout_marginTop="180dp"
      android:layout_marginEnd="64dp"
      android:text="@string/off_on"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <androidx.appcompat.widget.SwitchCompat
      android:id="@+id/s2"
      android:layout_width="113dp"
      android:layout_height="80dp"
      android:layout_marginStart="122dp"
      android:layout_marginEnd="67dp"
      android:layout_marginBottom="384dp"
      android:text="@string/off_on"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.936"
      app:layout_constraintStart_toEndOf="@+id/txo2" />

  <TextView
      android:id="@+id/txo1"
      android:layout_width="106dp"
      android:layout_height="56dp"
      android:layout_marginStart="88dp"
      android:layout_marginTop="180dp"
      android:layout_marginEnd="87dp"
      android:text="@string/draculacolor"
      app:layout_constraintEnd_toStartOf="@+id/s1"
      app:layout_constraintHorizontal_bias="1.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <TextView
      android:id="@+id/txo2"
      android:layout_width="75dp"
      android:layout_height="45dp"
      android:layout_marginStart="96dp"
      android:layout_marginBottom="412dp"
      android:text="@string/bigsize"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>