<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/bt_map"
        android:layout_width="138dp"
        android:layout_height="88dp"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="52dp"
        android:text="Google Maps"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/bt1"
        android:layout_width="138dp"
        android:layout_height="88dp"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="170dp"
        android:text="@string/options"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/bt2"
        android:layout_width="138dp"
        android:layout_height="83dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="170dp"
        android:text="@string/shop_assistant"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tx1"
        android:layout_width="334dp"
        android:layout_height="126dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:rotation="-8"
        android:rotationX="-13"
        android:rotationY="2"
        android:text="@string/welcome_to_your_shopassistant"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.109" />

    <Button
        android:id="@+id/bt_shop"
        android:layout_width="150dp"
        android:layout_height="81dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="36dp"
        android:text="Favourite Shop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt2" />

</androidx.constraintlayout.widget.ConstraintLayout>